# Elric

./: Cargo.toml  README.md
py/: test.py
src/: event.rs  exchange.rs  logger.rs  main.rs  messages.rs  orderbook.rs  protocol.rs  server.rs  types.rs  utils.rs
