[package]
name = "elric"
version = "0.1.0"
authors = ["benzyx <frenzybenzy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "*", features = ["sync", "fs", "rt-threaded", "macros", "tcp", "time", "dns", "blocking"] }
tokio-util = { version = "*", features = ["codec"] }
rustls = "*"
tokio-rustls = "*"
serde = { version = "*", features = ["rc", "derive"] }
serde_json = "*"
bincode = "*"
structopt = "*"
futures = "*"
log = "*"
